[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Roboto/Regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/BtnStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/ui/BtnHoverStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/BtnPressedStyle.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.819608, 0.847059, 0.878431, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0.819608, 0.847059, 0.878431, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )

[node name="ColorRect" type="ColorRect"]
margin_left = 0.587402
margin_right = 1920.59
margin_bottom = 1080.0
color = Color( 0.294118, 0.396078, 0.517647, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.5
margin_right = 219.5
margin_bottom = 57.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
text = "The MF TMFB Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -38.0
margin_right = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
text = "By: TMFB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -519.0
margin_top = -38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
text = "Game version: 0.0.1 CLOSED ALPHA"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.001
margin_top = -344.0
margin_right = 323.999
margin_bottom = 440.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton" type="Button" parent="VBoxContainer"]
margin_right = 648.0
margin_bottom = 63.0
theme = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton4" type="Button" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 648.0
margin_bottom = 166.0
theme = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton2" type="Button" parent="VBoxContainer"]
margin_top = 206.0
margin_right = 648.0
margin_bottom = 269.0
theme = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.001
margin_top = 409.0
margin_right = 323.999
margin_bottom = 543.0
custom_constants/separation = 89
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton3" type="Button" parent="VBoxContainer2"]
margin_right = 648.0
margin_bottom = 63.0
theme = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ToolButton" to="." method="on_single_press"]
[connection signal="pressed" from="VBoxContainer/ToolButton4" to="." method="on_multiplayer_press"]
[connection signal="pressed" from="VBoxContainer2/ToolButton3" to="." method="on_exit_press"]
